@@ -4,7 +4,10 @@ Changelog for z3c.testsetup
 0.7 (unreleased)
 ================
 
-- Nothing changed yet.
+- Test files that we attempt to read but that do not exist raise an error
+  instead of passing silently.
+
+- Internal refactoring: regex caching.
 
 
 0.6 (2009-11-19)
